--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 body {
-  background-color: black;
+  width: 100%;height:100%;
+/* background: url('../images/background.jpg');
+ background-repeat: no-repeat;
+ /* background: url(https://w-dog.ru/wallpapers/12/9/432356402657725/abstraktnye-cveta-nerealno-oblaka-prostranstvo-fon.jpg);*/
+ background: linear-gradient(to right, #000000, #504f01);
 }
 
 h1 {
@@ -13,5 +17,4 @@ img {
   height: 300px;
 }
 
-canvas {height: 501px;width: 500px; background-color:white;
-}
+.second-img {align-self: center;}
