--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 body {
-  width: 100%;height:100%;
-/* background: url('../images/background.jpg');
- background-repeat: no-repeat;
- /* background: url(https://w-dog.ru/wallpapers/12/9/432356402657725/abstraktnye-cveta-nerealno-oblaka-prostranstvo-fon.jpg);*/
- background: linear-gradient(to right, #000000, #504f01);
+  width: 100%;
+  height: 100%;
+  background: url("../images/background.jpg");
+  background-repeat: no-repeat;
+  background: linear-gradient(to right, #000000, #504f01);
+  padding: 0;
+  margin: 0;
 }
 
 h1 {
-  color: rgb(245, 245, 252);
+  color: rgb(255, 255, 255);
 }
 
 img {
@@ -17,4 +19,29 @@ img {
   height: 300px;
 }
 
-.second-img {align-self: center;}
+.second-img {
+  align-self: center;
+}
+
+header {
+  height: 100px;
+  width: 100%;
+  background-color: rgb(59, 119, 36);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 70%;
+  background-color: rgb(0, 4, 255);
+  margin: 0 auto;
+  padding: 10px;
+}
+
+footer {
+  height: 200px;
+  background-color: cyan;
+  width: 100%;
+}
